--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,6 @@ add_subdirectory(core)
 add_subdirectory(client)
 add_subdirectory(resource_manager)
 add_subdirectory(auto_allocator)
-add_subdirectory(thirdparty/cube)
+#add_subdirectory(thirdparty/cube)
 add_subdirectory(thirdparty/zmq)
+add_subdirectory(thirdparty/caf)
