Creating a class to send heartbeats at a given interval and a given timeout

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -4,9 +4,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-add_executable( ${PROJECT_NAME} entry.cpp )
+add_executable( ${PROJECT_NAME} entry.cpp Heartbeat.cpp)
 
-target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/cube/include) 
-target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/cube/modules)
-message(${LFGE_BINARY_DIRECTORY})
-target_link_libraries( ${PROJECT_NAME} qb-core )
+target_link_libraries( ${PROJECT_NAME} caf_core )
+
+#target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/cube/include) 
+#target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/cube/modules)
+#message(${LFGE_BINARY_DIRECTORY})
