Making all the include files together. Making core shared library Starting the construction of resource manager project

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,13 +1,12 @@
-project( ${LFGE_PREFIX}_core LANGUAGES CXX DESCRIPTION "Core Lock free version of grid engine" )
+project( ${LFGE_PREFIX}_core LANGUAGES CXX DESCRIPTION "Core Library Lock free version of grid engine" )
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-add_executable( ${PROJECT_NAME} entry.cpp Heartbeat.cpp)
+add_library( ${PROJECT_NAME} SHARED entry.cpp Heartbeat.cpp)
 
 target_link_libraries( ${PROJECT_NAME} caf_core )
 
-#target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/cube/include) 
+target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/include/core) 
 #target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/cube/modules)
 #message(${LFGE_BINARY_DIRECTORY})
