Writing simple entrypoints for client and remote manager Adding a registration service Adding a service manager Adding a RM config

--- a/resource_manager/CMakeLists.txt
+++ b/resource_manager/CMakeLists.txt
@@ -3,9 +3,13 @@ project( ${LFGE_PREFIX}_resource_manager LANGUAGES CXX DESCRIPTION "Resource Man
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable( ${LFGE_PREFIX}_resource_manager entry.cpp)
+add_executable( ${LFGE_PREFIX}_resource_manager 
+    entry.cpp
+    RegisteringService.cpp
+    ServiceManager.cpp)
 
 target_link_libraries( ${PROJECT_NAME} ${LFGE_PREFIX}_core )
 target_link_libraries( ${PROJECT_NAME} caf_core )
+target_link_libraries( ${PROJECT_NAME} caf_io )
 
 target_include_directories( ${PROJECT_NAME} PUBLIC ${LFGE_DIRECTORY}/include) 
