--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,5 @@ add_subdirectory(client)
 add_subdirectory(resource_manager)
 add_subdirectory(auto_allocator)
 #add_subdirectory(thirdparty/cube)
-add_subdirectory(thirdparty/zmq)
+#add_subdirectory(thirdparty/zmq)
 add_subdirectory(thirdparty/caf)
